[package]
name = "csv2xlsx"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Convert CSV files to Excel (in XLSX format)"
repository = "https://github.com/jacobsvante/csv2xlsx"
documentation = "https://docs.rs/csv2xlsx/"
homepage = "https://github.com/jacobsvante/csv2xlsx"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.1"
simple_excel_writer = "0.2"
unescape = "0.1"
